Fix favorite anim breaks on title change. Resize.

--- a/client/src/app/nba/team-item/team-item.component.css
+++ b/client/src/app/nba/team-item/team-item.component.css
@@ -57,7 +57,7 @@
 }
 
 .team-title h1 {
-    font-size: 32px;
+    font-size: 24px;
 }
 
 .team-title a {
